[package]
name = "szsol-rs"
version = "0.1.0"
edition = "2024"
description = "SHENZHEN I/O Solitaire – CLI clone in Rust"

[dependencies]
bincode = "1.3"
directories = "6.0.0"
hmac = "0.12.1"
rand = "0.9"
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.10.9"

[dev-dependencies]

[[bin]]
name = "szsol"
path = "src/main.rs"
