[package]
name = "szsol-rs"
version = "1.0.1"
edition = "2024"
description = "SHENZHEN I/O Solitaire – CLI clone in Rust"
repository = "https://github.com/ghoker143/szsol-rs"

[dependencies]
bincode = "1.3"
directories = "6.0.0"
hmac = "0.12.1"
rand = "0.9"
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.10.9"

[dev-dependencies]

[[bin]]
name = "szsol-rs"
path = "src/main.rs"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
